# estimate-agent-backend

./: README.md
.github/workflows/: deploy-functions.yml
docs/: 00_system_prompt.md
functions/estimate-api/: function_app.py  pyproject.toml  requirements.txt
functions/estimate-api/enhance_estimate/: __init__.py  function.json
